# Orca-ztbus-python-processor

./: .gitignore  LICENSE  README.md  db.py  main.py  makefile  processor.py  pyproject.toml  queries.py  simulator.py  windows.py
processor/: db.py  dockerfile  main.py  other_metrics.py  queries.py
simulator/: .env.example  db.py  dockerfile  main.py  pyproject.toml  windows.py
